--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "headers": [
     {
-      "source": "/api/login",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
